--- a/products.html
+++ b/products.html
@@ -39,6 +39,11 @@
   <main class="pb-5 container">
     <div class="container">
       <div class="alert alert-danger text-center" role="alert">
+
+        
+        <!-- Acá hay que desarrollar -->
+
+
         <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
       </div>
     </div>
