--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>eMercado - Todo lo que busques está aquí</title>
+  <title>eMercado | Iniciar sesión</title>
   
   <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,15 +19,26 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
+      <div class="text-center" role="alert">
+        <h4 class="alert-heading">Iniciar sesión</h4>
       </div>
+      <br>
     </div>
+    <div class="container text-center"> Correo electrónico
+    <br>
+    <input type="email" id="correo">
+    <br>
+    Contraseña
+    <br>
+    <input type="password" id="contrasena">
+    <br> <br>
+    <div id="boton-enviar">Enviar</div>
+  </div>
   </main>
   <footer class="text-muted">
     <div class="container">
       <p class="float-end">
-        <a href="#">Volver arriba</a>
+        <a href="index.html">Volver a inicio</a>
       </p>
       <p>Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a> -
         2022</p>
