--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
       background-color: rgb(248, 249, 250);
     }
   </style>
+  <script src="js/login.js"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
     <br>
     <input type="password" id="contrasena">
     <br> <br>
-    <div id="boton-enviar">Enviar</div>
+    <button type="button" id="boton-enviar">Enviar</button>
   </div>
   </main>
   <footer class="text-muted">
@@ -45,7 +46,6 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <script src="js/login.js"></script>
 </body>
 
 </html>
