--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html">Iniciar sesión</a>
+            <a class="nav-link" id="loginBtn" href="login.html">Iniciar sesión</a>
           </li>
           <li class="nav-item">
           </li>
@@ -93,6 +93,7 @@
   <script src="js/bootstrap.bundle.min.js"></script>
   <script src="js/index.js"></script>
   <script src="js/init.js"></script>
+  <script src="js/login.js"></script>
 </body>
 
 </html>
