Cambios finales antes de la entrega 1

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 <body>
   <main class="mt-5">
     <div class="container">
-      <div class="text-center" role="alert">
+      <div class="text-center">
         <h4 class="alert-heading">Iniciar sesión</h4>
       </div>
       <br>
