Entregas 2 y 3 terminadas (espero nunca volver a ver la entrega 2)

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="loginBtn" href="login.html">Iniciar sesión</a>
+            <button id="loginBtn"></button>
           </li>
           <li class="nav-item">
+            <button type="button" id="logoutBtn">Cerrar sesión</button>
           </li>
         </ul>
       </div>
