--- a/products.html
+++ b/products.html
@@ -33,12 +33,46 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <button id="loginBtn"></button>
+          </li>
+          <li class="nav-item">
+            <button type="button" id="logoutBtn">Cerrar sesión</button>
           </li>
         </ul>
       </div>
     </div>
   </nav>
   <main class="pb-5 container">
+    <div class="container"><div class="row">
+      <div class="col text-end">
+        <div class="btn-group btn-group-toggle mb-4" data-bs-toggle="buttons">
+          <label class="btn btn-light" id="sortAscProducts">Precio ascendente</label>
+          <label class="btn btn-light" id="sortDescProducts">Precio descendente</label>
+          <label class="btn btn-light" id="sortBySoldProducts"><i class="fas fa-sort-amount-down mr-1"></i></label>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-6 offset-lg-6 col-md-12 mb-1 container">
+        <div class="row container p-0 m-0">
+          <div class="col">
+            <p class="font-weight-normal text-end my-2">Precio</p>
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="min." id="rangeFilterCountMinProducts">
+          </div>
+          <div class="col">
+            <input class="form-control" type="number" placeholder="máx." id="rangeFilterCountMaxProducts">
+          </div>
+          <div class="col-3 p-0">
+            <div class="btn-group" role="group">
+              <button class="btn btn-light btn-block" id="rangeFilterCountProducts">Filtrar</button>
+              <button class="btn btn-link btn-sm" id="clearRangeFilterProducts">Limpiar</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
     <div id="productsList">
       
     </div>
