--- a/categories.html
+++ b/categories.html
@@ -31,6 +31,10 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <button id="loginBtn"></button>
+          </li>
+          <li class="nav-item">
+            <button type="button" id="logoutBtn">Cerrar sesión</button>
           </li>
         </ul>
       </div>
@@ -103,5 +107,4 @@
   <script src="js/init.js"></script>
   <script src="js/categories.js"></script>
 </body>
-
 </html>
