--- a/cart.html
+++ b/cart.html
@@ -30,6 +30,10 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
+            <button id="loginBtn"></button>
+          </li>
+          <li class="nav-item">
+            <button type="button" id="logoutBtn">Cerrar sesión</button>
           </li>
         </ul>
       </div>
