--- a/cart.html
+++ b/cart.html
@@ -47,9 +47,27 @@
   </nav>
   <main>
     <div class="container">
-      <div class="alert alert-danger text-center" role="alert">
-        <h4 class="alert-heading">Funcionalidad en desarrollo</h4>
-      </div>
+      <br><h2><b>Carrito de compras de <span id="cartUsername"></span></b></h2>
+      <table class="table" id="cartTable">
+      <thead>
+      <tr>
+        <th></th>
+        <th>Producto</th>
+        <th>Costo</th>
+        <th>Cantidad</th>
+        <th>Subtotal</th>
+      </tr>
+      </thead>
+    </table></div>
+    <div class="container">
+      <h5><b>Tipo de envío</b></h5>
+      <input type="radio" name="envio">Premium 2 a 5 días 15%<br>
+      <input type="radio" name="envio">Express 5 a 8 días 7%<br>
+      <input type="radio" name="envio">Standard 12 a 15 días 5%<br>
+      <br>
+      Calle <input type="text"><br>
+      Número <input type="text"><br>
+      Esquina <input type="text">
     </div>
   </main>
   <footer class="text-muted">
